@startuml
interface black_jack.models_memory.MemoryInterface {
}
class black_jack.models_memory.NumberOfVisitsMemory {
+ {static} int INIT_VALUE
+ void clear()
+ int nofItems()
+ double read(StateObserved)
+ void write(StateObserved,double)
+ double average()
+ void increase(StateObserved)
}
class black_jack.models_memory.ValueMemory {
+ {static} double DEFAULT_VALUE
+ void clear()
+ int nofItems()
+ double read(StateObserved)
+ void write(StateObserved,double)
+ double average()
+ String toString()
}


black_jack.models_memory.MemoryInterface <|.. black_jack.models_memory.NumberOfVisitsMemory
black_jack.models_memory.MemoryInterface <|.. black_jack.models_memory.ValueMemory
@enduml